Home: estruturação dos volumes e acesso via celular

--- a/assets/css/padroes/_mixins.scss
+++ b/assets/css/padroes/_mixins.scss
@@ -38,5 +38,10 @@
     &:after { clear: both; }
 }
 
+@include keyframes(tornarVisivel) {
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
 
-%invisivel { width: 1px; height: 1px; overflow: hidden; line-height: 9999px; text-indent: 9999px; }
+@mixin invisivel() { width: 1px; height: 1px; overflow: hidden; line-height: 9999px; text-indent: 9999px; }
+@mixin visivel() { width: auto; height: auto; overflow: initial; line-height: inherit; text-indent: inherit; }
