--- a/assets/css/layout/_componentes.scss
+++ b/assets/css/layout/_componentes.scss
@@ -8,3 +8,20 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+
+/****************************************
+ * BOTAO *
+ ****************************************/
+a.btn {
+	display: inline-block;
+	padding: .8em 1.3em;
+	background: $preto; line-height: 1;
+	font-weight: bold; font-size: .8em;	
+	text-decoration: none; text-transform: uppercase;
+	border: 2px solid;
+
+	&:focus, &:hover {
+		border-color: $preto !important;
+	}
+}
