--- a/assets/css/padroes/_predefinicoes.scss
+++ b/assets/css/padroes/_predefinicoes.scss
@@ -10,12 +10,14 @@ $amarelo: #FCEE21;
 // azul
 $cores-livros: (
 	(#30C6F0), 
+	(#AB5DFF),
+	(#FFD301),
 );
 
 
 
 /////// FAMILIAS UTILIZADAS
-$fonte-padrao: 'Roboto',sans-serif;
+$fonte-padrao: 'Muli',sans-serif;
 $fonte-titulos: 'Roboto Slab',serif;
 
 
@@ -60,7 +62,7 @@ i, em { color: inherit; font-style: italic; }
 s, del { text-decoration: line-through; }
 
 // paragrafos e formatacoes padrao
-p, article ul, article ol, blockquote, figure { margin-bottom: 1.8em; }
+p, article ul, article ol, blockquote, figure, dl { margin-bottom: 1.8em; }
 
 small { font-size: 80%; }
 
@@ -81,7 +83,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-    font-size: 2.1em; 
+    font-size: 2.2em; 
     article {font-size: 1.9em;}
     @media (max-width: $smart-maior) {
     	font-size: 1.8em;
@@ -91,15 +93,15 @@ h1 {
 }
 
 h2 { 
-	font-size: 1.7em;
-	@media (max-width: $smart-maior) {font-size: 1.5em; }
+	font-size: 1.8em;
+	@media (max-width: $smart-maior) {font-size: 1.6em; }
 }
 h3 { 
-	font-size: 1.4em;
-	@media (max-width: $smart-maior) {font-size: 1.25em; }
+	font-size: 1.6em;
+	@media (max-width: $smart-maior) {font-size: 1.4em; }
 }
 h4 { 
-	font-size: 1.25em;
+	font-size: 1.4em;
 	@media (max-width: $smart-maior) {font-size: 1.2em; }
 }
 h5 { 
