--- a/assets/css/padroes/_mixins.scss
+++ b/assets/css/padroes/_mixins.scss
@@ -21,6 +21,9 @@
 
 
 @mixin fundocompleto($bg){
+    background: $bg;
+    position: relative;
+    
     &:before {
         content: "";
         width: 105vw; height: 100%;
