--- a/assets/css/padroes/_predefinicoes.scss
+++ b/assets/css/padroes/_predefinicoes.scss
@@ -3,7 +3,7 @@
  ****************************************/
 /////// CORES VARIAVEIS
 $preto: #212121;
-$cinza: #E5EAEA;
+$cinza: #E3E2E7;
 $amarelo: #FCEE21;
 
 
@@ -22,7 +22,7 @@ $fonte-titulos: 'Roboto Slab',serif;
 
 
 /////// MEDIA QUERIES e TAMANHOS
-$container: 1180px;
+$container: 1100px;
 $tablet: 990px;
 $smart-maior: 680px;
 $smart-menor: 500px;
