--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -9,7 +9,7 @@ body {
 	font-size: 18px;
 	line-height: 1.55;
 	color: $preto;
-	min-height: 200vh;
+	min-height: 100vh;
 	font-family: $fonte-padrao;
 	letter-spacing: 0.04em;
 	position: relative;
@@ -31,6 +31,10 @@ body {
 				nav ul li {
 					&.colecao a { color: $livros; }
 				}
+
+				&.ao-rolar {
+					nav ul li.nav a:nth-of-type(1) {background-color: $livros}
+				}
 			}
 
 			a.btn { background: $livros; }
@@ -39,5 +43,38 @@ body {
 	/****************************************
 	 ***** / FIM DE ADICAO DE CORES / *******
 	 ****************************************/	
+}
+
+progress {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 4px;
+	@include appearance(none);
+	border: none;
+	color: red;
+	z-index: 10; 
+	
+	&::-webkit-progress-bar { background-color: transparent; }
+	&::-webkit-progress-value { background-color: $amarelo; }
+	&::-moz-progress-bar { background-color: $amarelo; }	
+
+	.progress-container {
+		width: 100%;
+		background-color: transparent;
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		display: block;
+	}
+
+	.progress-bar {
+		background-color: $amarelo;
+		width: 50%;
+		display: block;
+		height: inherit;
+	}
 }
 
