Versão mobile para área de artigos

--- a/assets/css/padroes/_predefinicoes.scss
+++ b/assets/css/padroes/_predefinicoes.scss
@@ -27,7 +27,6 @@ $tablet: 990px;
 $smart-maior: 680px;
 $smart-menor: 500px;
 $celular: 380px;
-$sidebar: 300px;
 
 $artigo: 800px;
 
@@ -85,11 +84,13 @@ h1, h2, h3, h4, h5 {
 h1 {
     font-size: 2.2em; 
     article {font-size: 1.9em;}
+    
     @media (max-width: $smart-maior) {
     	font-size: 1.8em;
-
     	article {font-size: 1.7em;}
     }
+
+    @media (max-width: $smart-menor) {font-size: 1.6em;}
 }
 
 h2 { 
