--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -35,6 +35,10 @@ body {
 				&.ao-rolar {
 					nav ul li.nav a:nth-of-type(1) {background-color: $livros}
 				}
+
+				@media (max-width: $smart-maior) { 
+					nav { background-color: $livros; }
+				}
 			}
 
 			a.btn { background: $livros; }
