--- a/assets/css/layout/_componentes.scss
+++ b/assets/css/layout/_componentes.scss
@@ -36,8 +36,9 @@ a.btn {
  #header-volume {
 	@include flex(space-between);
 	@include fundocompleto(url('../img/textura.jpg') no-repeat center center / cover);
-	margin-bottom: 3em;
-	@include order(1);
+	margin-bottom: 3em; margin-right: -10px;
+	@include order(1); margin-left: -10px;
+	width: calc(100% + 20px);
 
 
 	.titulo {
@@ -56,17 +57,20 @@ a.btn {
 		}
 
 		h1 { 
-			display: inline-block; padding-bottom: .5em;
-			border-bottom: 20px solid $amarelo;
+			display: inline-block; 
+			border-bottom: 20px solid $amarelo; padding: 0 10px .5em;
 
 			span {position: relative;}
 		}
 	}
 
 	nav {
-		width: calc(35% - 20px);		
+		width: calc(35% - 20px);	
+
 		ul {
-			width: 100%;
+			width: 100%; 
+			@media (max-width: $celular) { @include transform(scale(0.8)); }
+
 			li {
 				display: block; margin-bottom: 20px; text-align: right;
 				&.colecao a {
@@ -86,12 +90,63 @@ a.btn {
 						&:hover, &:focus { background-color: $amarelo !important}
 						span { @include invisivel; }
 
-						&:nth-of-type(2) { background-image: url(../img/icone-imprimir.svg); display: none; }
+						&:nth-of-type(2) { background-image: url(../img/icone-imprimir.svg);}
+						@media (max-width: $smart-maior) { &:nth-of-type(2) { display: none; } }
 					}
 				}
 			}
 		}
 	}
+
+	@media (max-width: $smart-maior) {
+		.titulo, nav { width: 100%; }
+		.titulo {
+			@include order(2); padding-top: 80px;
+
+			&:before { height: 45px; }
+			&:after { top: 10px; left: 50%; @include transform(translateX(-50%)); }
+		}
+
+		nav {
+			@include order(1); padding-top: 10px;
+
+			ul {
+				@include display(flex);
+				@include justify-content(center);
+
+				li { margin: 0 0 0 10px;
+
+					&.colecao a { 
+						display: inline-block; height: initial; 
+						padding: .8em 1.3em; line-height: 1; color: $amarelo;
+						font-weight: bold; font-size: .8em;	text-decoration: none; 
+
+						span {position: relative; bottom: initial; right: initial;}
+					}
+
+					a.btn { 
+						background: $amarelo;
+						span {display: none;}
+					}
+
+					&.nav { 
+						a:nth-of-type(1) {
+							width: auto; line-height: inherit; margin: 0; padding: 0;
+							background-image: none; display: inline-block;
+							padding: .8em 1.3em;
+							line-height: 1; background-color: $amarelo;
+							font-weight: bold; font-size: .8em;	
+							text-decoration: none; text-transform: uppercase;
+							font-family: $fonte-titulos;
+							
+							span {@include visivel;}
+						}
+					}
+				}
+			}
+		}
+	}
+
 
 	&.ao-rolar {
 		z-index: 11;
@@ -109,6 +164,8 @@ a.btn {
 			@media (max-width: $container) {
 				right: 10px;
 			}
+
+			@media (max-width: $smart-maior) { a:nth-of-type(2) { display: none; } }
 		}
 	}
 }
@@ -122,6 +179,11 @@ a.btn {
 article {
 	width: 65%;
 	@include order(2);
+
+	@media (max-width: $smart-maior) {
+		width: 100%;
+		@include order(3);
+	}
 }
 
 aside {
@@ -132,4 +194,17 @@ aside {
 	padding: 1em 0 .5em; text-align: right;
 	border-top: 8px solid $amarelo;
 	border-bottom: 16px solid $amarelo;
+
+	@media (max-width: $smart-maior) {
+		width: 100%;
+		@include order(2); margin-bottom: 2em;
+		border-top: 0;
+		text-align: left;
+	}
+
+	@media (max-width: $smart-maior) and (min-width: $celular) {
+		columns: 2; column-gap: 20px;
+
+		dl { break-inside: avoid; }
+	}
 }
