--- a/assets/css/padroes/_predefinicoes.scss
+++ b/assets/css/padroes/_predefinicoes.scss
@@ -28,7 +28,7 @@ $smart-maior: 680px;
 $smart-menor: 500px;
 $celular: 380px;
 
-$artigo: 800px;
+$artigo: 715px;
 
 
 /////// IMPORTACOES
@@ -128,11 +128,10 @@ dl {
 hr {
 	display: block;
 	width: 280px;
-	margin: 2em auto;
+	margin: 2em 0;
     border: 0;
     padding: 0;
-    height: 7px;
-    // background: $cinza;
+    height: 4px;
     position: relative;
     overflow: inherit;
 }
@@ -150,35 +149,6 @@ textarea {
 	line-height: 1.65;
 }
 
-// botoes
-button.botao {
-	display: inline-block;
-	// background: $preto;
-	font-size: 1em;
-	line-height: 1; color: white;
-	padding: .7em 2em 1em; letter-spacing: 0.09em;
-	// font-family: $fonte-titulos; 
-	cursor: pointer;
-	@include transition(background 0.15s ease-in-out);
-}
-
-// video
-.video {
-	padding-bottom: 50.4%;
-	padding-top: 30px;
-	width: 100%;
-	font-size: 0; margin-bottom: 35px;
-	position: relative;
-	
-	iframe, object, embed, .mascara {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;		
-		// padding-bottom: 2.5%
-	}
-}
 
 // definicoes
 .hidden { display: none; }
