--- a/assets/css/padroes/_predefinicoes.scss
+++ b/assets/css/padroes/_predefinicoes.scss
@@ -10,10 +10,12 @@ $amarelo: #FCEE21;
 // azul
 $cores-livros: (
 	(#30C6F0), 
-	(#AB5DFF),
-	(#FFD301),
+	(#936FFF),
+	(#43E0A2),
+	(#FF6E7C),
+	(#FF9157),
+	(#8BC3DE),
 );
-
 
 
 /////// FAMILIAS UTILIZADAS
