--- a/assets/css/layout/_componentes.scss
+++ b/assets/css/layout/_componentes.scss
@@ -25,6 +25,10 @@ a.btn {
 	&:focus, &:hover {
 		background: $amarelo !important;
 	}
+
+	&.maior {
+		font-size: 1.2em;
+	}
 }
 
 
@@ -283,7 +287,7 @@ article {
 		max-width: 800px;
 		font-size: 0.8em;
 		border: 1px solid $preto;
-		margin: 2em auto 0; 
+		margin: 2em auto; 
 
 		img {
 			width: 100%; height: auto;
